--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: #ffffff;
-    font-family: cursive;
+    font-family: "Caveat", serif;
     text-decoration: none;
 }
 
